// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gifDetails component when hiding gif details renders correctly 1`] = `
<div
  className="hide-details gif-details"
>
  <div
    className="gif-detail-text"
  >
     rating: 
    g
     
  </div>
  <div
    className="gif-detail-text"
  >
     username: 
    some-username
     
  </div>
  <div
    className="gif-detail-text date"
  >
    uploaded: 
    Jan 1st 1970
  </div>
</div>
`;

exports[`gifDetails component when showing gif details renders correctly 1`] = `
<div
  className="show-details gif-details"
>
  <div
    className="gif-detail-text"
  >
     rating: 
    g
     
  </div>
  <div
    className="gif-detail-text"
  >
     username: 
    some-username
     
  </div>
  <div
    className="gif-detail-text date"
  >
    uploaded: 
    Jan 1st 1970
  </div>
</div>
`;
